# EEM_TASK

./: Schedule.xlsx
CarControlSystems/BrakeControl/: CMakeLists.txt
CarControlSystems/BrakeControl/main/: CMakeLists.txt  brake_control_manager.c
Checklists/: RequirementChecklist.xlsx  SpeedControlManager.c
ECUStateManager/: Makefile
ECUStateManager/inc/: ECUStateManager_definition.h  ECUStateManager_global.h  ECUStateManager_public.h
Interviews/BarışÇ/: CMakeLists.txt
Interviews/BüşraT/: gas_pedal.c
Interviews/Ekrem/: pedalsystem.c
MotorDriveCharts/: .$EMobil_Driver_MotorDriveFeature.drawio.bkp  .$SwArchitecture.drawio.bkp  EMobil_Driver_MotorDriveFeature.drawio  EMobil_Driver_Notes.txt  EMobil_Driver_UseCase.drawio
MotorDriveFeature/: EEM_MS_HLD.doc  EEM_MS_HLD_V1.0.0-2.docx
MotorDriveFeature/Abstract_CoreManager/: Abstract_CoreManager.h
MotorDriveFeature/Abstract_MotorDriver/: Abstract_MotorDriver.h
MotorDriveFeature/Abstract_SmartGateDriver/: Abstract_SmartGateDriver.h
MotorDriveFeature/Abstract_VehComManager/: Abstract_VehComManager.h
MotorDriveFeature/BrakeAndDirectionManager/: Makefile
MotorDriveFeature/ECUStateManager/: Makefile
MotorDriveFeature/GateDriverController/: Makefile
MotorDriveFeature/HALLSensorConfiguration/: Makefile
Task1/ahmetvedat/: main.cpp  (+2 more)
Task3/: .$EMobil_Driver_MotorDriveFeature.drawio.dtmp  .$EMobil_Driver_UseCase.drawio.bkp  EMobil_Driver_MotorDriveFeature.drawio  SwArchitecture.drawio
TemplateComponentDetailedDesign/: isrTemplateComponent.drawio
WeeklySlides/: W1.pptx  W2.pptx  W3.pptx  W4.pptx
(+1577 files in other folders)
